marvel service integration done
Summary:
- marvel service integration done and character list received from service
- rendered character list on homepage
- eslintrc.json & .gitignore fixed

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,8 @@
     "rules": {
         "quotes": [
             "error",
-            "single"
+            "single",
+            { "allowTemplateLiterals": true }
         ],
         "jsx-quotes": [
             "error",
