jest config done & added first test file
Summary;
- jest.config.js added and configuration done
- added ignorePatterns to .eslintrc.json for test files
- added first test file (marvel-service.spec.test)
- added dev packages node-fetch, dotenv, react-test-renderer, ts-jest

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "@typescript-eslint",
         "react-hooks"
     ],
+    "ignorePatterns": ["__tests__/*", "jest.config.js", "babel.config.js"],
     "rules": {
         "quotes": [
             "error",
